<resources>
    <string name="app_name">newsAppKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy">&#169;</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="login">Login</string>
</resources>